backend: Iterable --> List in DB and regenerated openapi
