# backend/src/main/java/gang/gutscheingang/controllers/CompanyController.java
@@ -9,6 +9,7 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.web.server.ResponseStatusException;
 
 
+import java.util.List;
 import java.util.UUID;
 
 @RestController
@@ -34,7 +35,7 @@ public class CompanyController {
     }
 
     @GetMapping(produces = "application/json")
-    public Iterable<Company> getCompanies() {
+    public List<Company> getCompanies() {
         return companyRepository.findAll();
     }
 
